Fix for zabbix 3.4 standart

--- a/zabbix_agentd.d/userparameter_domain.conf
+++ b/zabbix_agentd.d/userparameter_domain.conf
@@ -2,4 +2,4 @@
 # To get more information about Zabbix, visit http://www.zabbix.com
 
 #domain
-UserParameter=domain[*],/etc/zabbix/scripts/domain.sh $1
+UserParameter=domain[*],/etc/zabbix/zabbix_agentd.scripts/domain.sh $1
